--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -1,8 +1,12 @@
 <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
     <div class="col-lg-6 px-0">
-      <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
+      <h1 class="display-4 fst-italic">{{ text }}</h1>
       <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-      <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">Continue reading...</a></p>
+      <form class="d-flex" role="search">
+        <input [(ngModel)]="input" name="input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" (click)="changeText()" type="button">Change Text</button>
+      </form>
+      <p class="lead mb-0"><a href="javascript:;" class="text-body-emphasis fw-bold">Continue reading...</a></p>
     </div>
   </div>
   <div class="row mb-2">
