added route for single post

--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
             <h3 class="mb-0">{{ post.title }}</h3>
             <div class="mb-1 text-body-secondary">Nov 12</div>
             <p class="card-text mb-auto">{{ post.body }}</p>
-            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+            <a routerLink="/post/{{post.id}}" class="icon-link gap-1 icon-link-hover stretched-link">
               Continue reading
               <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
             </a>
